--- a/BlazorDapperCrud8/Components/App.razor
+++ b/BlazorDapperCrud8/Components/App.razor
@@ -15,6 +15,8 @@
 
 <body>
     <Routes />
+    <script src="_content/NetcodeHub.Packages.Components.Modal/modal.js"></script>
+
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 
